--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-GITHUB_TOKEN=
-GITHUB_OWNER=
-GITHUB_REPO=
+GITHUB_TOKEN=SECURITY_THEMEFISHER
+GITHUB_OWNER=neephat
+GITHUB_REPO=themefisher-task
 GITHUB_BRANCH=main
 GITHUB_TARGET_PATH=content
 MARKDOWN_SOURCE_PATH=content/hello.md
